<resources>
    <string name="app_name">LocationTracker</string>

    <string name="My_tracks">My Tracks</string>
    <string name="No_tracks">You have no tracks recorded.Click on new tracks button to start recording tracks.</string>
    <string name="New_track">NEW TRACK</string>
    <string name="New_track_title">New Track</string>
    <string name="Name">Name:</string>
    <string name="name">Name</string>
    <string name="Description">Description:</string>
    <string name="track_name_hint">Enter name</string>
    <string name="track_desc_hint">Enter description</string>
    <string name="start">START</string>
    <string name="new_track_error_field_format">Field %1$s cannot be empty!</string>
    <string name="track_details_title">Title</string>
    <string name="track_details_description">Description</string>
    <string name="addLocation">ADD LOCATION</string>
    <string name="no_location">You have no location samples recorded.Click on Add Location button to start recording samples.</string>
    <string name="done">DONE</string>
    <string name="add_location">Add Location</string>
    <string name="Latitude">Latitude:</string>
    <string name="track_name_Latitude">Enter Latitude</string>
    <string name="Longitude">Longitude:</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="Speed">Speed</string>
    <string name="track_name_Longitude">Enter Longitude</string>
    <string name="Altitude">Altitude:</string>
    <string name="track_name_Altitude">Enter Altitude</string>
    <string name="speed">Speed:</string>
    <string name="add">ADD</string>
    <string name="settingsTitle">Settings</string>
    <string name="sampling_rate">Sampling rate:</string>
    <string name="track_name_SamplingRate">Sampling rate</string>
    <string name="home_city">Home City:</string>
    <string name="settings_latitude_format">LAT: %1$s.4f °</string>
    <string name="settings_longitude_format">LONG: %1$s.4f °</string>
    <string name="settings_altitude_format">ALT: %1$s.4f m</string>

    <string name="settings_latitude">LAT: %1$s °</string>
    <string name="settings_longitude">LONG: %1$s °</string>
    <string name="settings_altitude">ALT: %1$s m</string>

    <string name="invalid_input">Invalid input</string>
    <string name="enter_correct_val">Enter correct values</string>
    <string name="track_details_dialog_title">Done?</string>
    <string name="track_details_dialog_message">Have You finished adding locations?</string>
    <string name="track_details_dialog_yes">Yes</string>
    <string name="track_details_dialog_no">No</string>
    <string name="add_location_error_field_value_format">Field %1$s must be between %2$d and %3$d degrees!</string>
</resources>
